# idwbif

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/idwbif/: __init__.py  decorators.py
tests/: test_decorators.py
